name:     netwire
version:  5.0.1.1
category: FRP
synopsis: Functional reactive programming library

maintainer:   Yun-Yan Chi <jaiyalas@gmail.com>
author:       Ertugrul Söylemez <ertesx@gmx.de>
copyright:    (c) 2014 Ertugrul Söylemez
homepage:     https://github.com/jaiyalas/netwire
bug-reports:  https://github.com/jaiyalas/netwire/issues
license:      BSD3
license-file: LICENSE

description:
    This library provides interfaces for and implements wire arrows
    useful both for functional reactive programming (FRP) and locally
    stateful programming (LSP).

build-type:    Simple
cabal-version: >= 1.12
extra-source-files:
    README.md
    shell.nix

Source-repository head
    type:     git
    location: https://github.com/jaiyalas/netwire

flag TestProgram
    default: False
    description: Build the test program
    manual: True

library
    build-depends:
        base         >= 4.5  && < 5,
        containers   >= 0.5  && < 1,
        deepseq      >= 1.3  && < 2,
        parallel     >= 3.2  && < 4,
        profunctors  >= 4.3  && < 6,
        random       >= 1.1  && < 2,
        semigroups   >= 0.15 && < 1,
        transformers >= 0.3  && < 1,
        time         >= 1.4  && < 2
    default-language: Haskell2010
    default-extensions:
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveTraversable
        FlexibleInstances
        FunctionalDependencies
        GADTs
        MultiParamTypeClasses
        RankNTypes
        TupleSections
    ghc-options: -W
    exposed-modules:
        Control.Wire
        Control.Wire.Core
        Control.Wire.Event
        Control.Wire.Interval
        Control.Wire.Run
        Control.Wire.Session
        Control.Wire.Switch
        Control.Wire.Time
        Control.Wire.Unsafe.Event
        FRP.Netwire
        FRP.Netwire.Analyze
        FRP.Netwire.Move
        FRP.Netwire.Noise
        FRP.Netwire.Utils.Timeline
